--- a/starter/ContosoDentistryWebsite/index.html
+++ b/starter/ContosoDentistryWebsite/index.html
@@ -53,11 +53,11 @@
 			<div class="row aln-center">
 				<div class="col-6 col-6-medium col-12-small">
 					<section class="box style1">
-						<!-- paste code from the webchat page in azure -->
+						<iframe src="https://webchat.botframework.com/embed/dentistry-assistant-bot?s=Zb_Fl5c1cjc.0vVcwcIeo8KoGvjleGicQGgFF6XcjYZDkfUCnpQeIXg" style="height: 502px; max-height: 502px;"></iframe>
 					</section>
 				</div>
 			</div>
-		</div>
+		</div>	
 	</article>
 
 	<script src="assets/js/jquery.min.js"></script>
